@@ -11,6 +11,7 @@ NOTE: uriparser is looking for help with a few things:
       Thanks to Schrijvers Luc for the patch!
   * Fixed: Mark API functions with __declspec(dllexport) and
       __declspec(dllimport) in *.h files for Visual Studio
+  * Improved: Use -fvisibility=hidden by default with supporting compilers
   * Changed: Migrated from GNU Autotools to CMake (GitHub #17, #47, #56, #59)
       Thanks for their support with the CMake migration to:
       - David Demelier
